--- a/training.html
+++ b/training.html
@@ -635,6 +635,191 @@
         <!-- Header Ends -->
 
         <!-- Start of Training Section -->
+<!-- Hero Section -->
+<header class="hero">
+    <div class="container">
+        <div class="hero-content">
+            <div class="hero-text">
+                <h1 class="animate-on-scroll">Transforming Ideas into Digital Reality</h1>
+                <p class="animate-on-scroll">Dash and Dots: Crafting innovative web and mobile applications with the power of the MERN stack to drive business growth and user engagement.</p>
+                <a href="#" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
+            </div>
+            <div class="hero-image animate-on-scroll">
+                <img src="/images/mobile_demo.jpeg" alt="MERN Stack App Mockup">
+            </div>
+        </div>
+    </div>
+    <div class="floating floating-1"></div>
+    <div class="floating floating-2"></div>
+</header>
+
+<!-- Services Section -->
+<section class="services">
+    <div class="container">
+        <h2 class="section-title animate-on-scroll">Our MERN Stack Specializations</h2>
+        <div class="service-grid">
+            <div class="service-card animate-on-scroll">
+                <div class="service-icon">
+                    <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+                    </svg>
+                </div>
+                <h3>Full-Stack Development</h3>
+                <p>End-to-end web and mobile solutions built with MongoDB, Express.js, React, and Node.js for seamless performance.</p>
+            </div>
+            <div class="service-card animate-on-scroll">
+                <div class="service-icon">
+                    <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                        <line x1="8" y1="21" x2="16" y2="21"></line>
+                        <line x1="12" y1="17" x2="12" y2="21"></line>
+                    </svg>
+                </div>
+                <h3>UI/UX Design with React</h3>
+                <p>Crafting intuitive and responsive user interfaces using React for enhanced user engagement and satisfaction.</p>
+            </div>
+            <div class="service-card animate-on-scroll">
+                <div class="service-icon">
+                    <svg width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                        <circle cx="12" cy="7" r="4"></circle>
+                    </svg>
+                </div>
+                <h3>API Development & Integration</h3>
+                <p>Building robust RESTful APIs with Node.js and Express.js for seamless backend integration and scalability.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Features Showcase -->
+<section class="features">
+    <div class="container">
+        <h2 class="section-title animate-on-scroll">Innovative Features for Your MERN Stack Applications</h2>
+        <div class="features-content">
+            <div class="features-list">
+                <div class="feature-item animate-on-scroll">
+                    <h3>
+                        <span class="feature-number">1</span>
+                        Real-Time Data Sync
+                    </h3>
+                    <p>Leverage MongoDB and Node.js for real-time data synchronization across devices.</p>
+                </div>
+                <div class="feature-item animate-on-scroll">
+                    <h3>
+                        <span class="feature-number">2</span>
+                        Responsive UI with React
+                    </h3>
+                    <p>Build dynamic, responsive user interfaces that adapt seamlessly to any screen size.</p>
+                </div>
+                <div class="feature-item animate-on-scroll">
+                    <h3>
+                        <span class="feature-number">3</span>
+                        Scalable Backend Architecture
+                    </h3>
+                    <p>Design scalable and efficient backend systems using Express.js and Node.js.</p>
+                </div>
+            </div>
+            <div class="features-image animate-on-scroll">
+                <img src="/images/mobile_dash.jpeg" alt="MERN Stack Dashboard">
+                <div class="floating floating-3"></div>
+                <div class="floating floating-4"></div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Case Study Section -->
+<section class="success-stories">
+    <div class="container">
+        <h2>MERN Stack Success Stories</h2>
+        <div class="slider-container">
+            <div class="slider">
+                <div class="slide active">
+                    <div class="slide-content">
+                        <div class="slide-text">
+                            <h3>AppMaster: 300% User Growth</h3>
+                            <p>Our MERN stack solution helped AppMaster achieve remarkable growth:</p>
+                            <ul>
+                                <li>✓ 300% increase in active users</li>
+                                <li>✓ 50% improvement in user retention</li>
+                                <li>✓ 25% boost in in-app purchases</li>
+                            </ul>
+                        </div>
+                        <div class="slide-image">
+                            <img src="/images/mobile_story.jpeg" alt="AppMaster Success Story">
+                        </div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide-content">
+                        <div class="slide-text">
+                            <h3>WebGenius: Streamlined Development</h3>
+                            <p>Our MERN stack process helped WebGenius launch faster:</p>
+                            <ul>
+                                <li>✓ 40% reduction in development time</li>
+                                <li>✓ 60% decrease in bug reports</li>
+                                <li>✓ 100% increase in feature releases</li>
+                            </ul>
+                        </div>
+                        <div class="slide-image">
+                            <img src="/images/mobile_story.jpeg" alt="WebGenius Success Story">
+                        </div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide-content">
+                        <div class="slide-text">
+                            <h3>SwiftApp: Enhanced User Experience</h3>
+                            <p>Our React-based UI/UX redesign transformed SwiftApp's user satisfaction:</p>
+                            <ul>
+                                <li>✓ 95% user satisfaction rate</li>
+                                <li>✓ 70% increase in daily active users</li>
+                                <li>✓ 45% reduction in user churn</li>
+                            </ul>
+                        </div>
+                        <div class="slide-image">
+                            <img src="/images/mobile_story.jpeg" alt="SwiftApp Success Story">
+                        </div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="slide-content">
+                        <div class="slide-text">
+                            <h3>TechMobile: Scalability Achievement</h3>
+                            <p>Our Node.js backend helped TechMobile expand rapidly:</p>
+                            <ul>
+                                <li>✓ Scaled from 10k to 1M users in 6 months</li>
+                                <li>✓ 99.99% uptime during peak loads</li>
+                                <li>✓ 30% reduction in server costs</li>
+                            </ul>
+                        </div>
+                        <div class="slide-image">
+                            <img src="/images/mobile_story.jpeg" alt="TechMobile Success Story">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="slider-btn prev">&lt;</button>
+            <button class="slider-btn next">&gt;</button>
+        </div>
+        <div class="slider-dots"></div>
+    </div>
+</section>
+
+<!-- CTA Section -->
+<section class="cta">
+    <div class="container">
+        <h2 class="animate-on-scroll">Ready to Build Your Next Great MERN Stack App?</h2>
+        <p class="animate-on-scroll">Let Dash and Dots turn your vision into a powerful, user-friendly web or mobile application. Our team of MERN stack experts is ready to bring your ideas to life.</p>
+        <a href="#" class="btn btn-secondary animate-on-scroll">Reach Out to Us</a>
+    </div>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none">
+        <path d="M0,100 C30,50 70,50 100,100" fill="#ffffff"></path>
+    </svg>
+    <div class="floating floating-5"></div>
+    <div class="floating floating-6"></div>
+</section>
 
         <!-- End of Training Section -->
 
