--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
       }
     </script>
 
+    <!-- Icon -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
     <!-- CSS Begins-->
     <link
       rel="stylesheet"
@@ -1814,7 +1818,7 @@
         <!-- Shape 3 Container Begins -->
         <div class="gk-shape-cover">
           <!-- Shape 3 Color Begins -->
-          <div class="gk-dd-shape grey-white-color index-3">
+          <div class=" grey-white-color index-3">
             <!-- Pricing Section Begins -->
             <div class="container">
               <h3 class="section-msg1 color-grey text-uppercase mb-6">
@@ -2006,13 +2010,13 @@
                         href="#"
                         class="btn gk-download-btn redalt-btn gk-btn-margin"
                         role="button"
-                        ><i class="fa fa-apple"></i> Apple User</a
+                        ><i class="fa-brands fa-apple"></i> Apple User</a
                       >
                       <a
                         href="#"
                         class="btn gk-download-btn green-btn"
                         role="button"
-                        ><i class="fa fa-android"></i> Android User</a
+                        ><i class="fa-brands fa-android"></i> Android User</a
                       >
                     </div>
 
