--- a/index.html
+++ b/index.html
@@ -1898,87 +1898,34 @@
                       data-animation-delay="900"
                     >
                       <!-- Form Begins -->
-                      <form
-                        role="form"
-                        name="contactform"
-                        class="form-horizontal"
-                        id="contactform"
-                        method="post"
-                        action="process.php"
-                      >
+                      <form role="form" name="contactform" class="form-horizontal" id="contactform" method="post" action="process.php">
+                        <div id="alert-container"></div>
+                        
                         <div class="row">
-                          <div class="col-sm-12 col-md-12">
-                            <div class="container">
-                              <div class="row">
-                                <!-- Input: Name -->
-                                <div class="col-md-12 form-group gk-input-text">
-                                  <input
-                                    type="text"
-                                    name="contact_name"
-                                    class="input-name form-control"
-                                    placeholder="Name"
-                                    required
-                                  />
+                            <div class="col-sm-12 col-md-12">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-md-12 form-group gk-input-text">
+                                            <input type="text" name="contact_name" class="input-name form-control" placeholder="Name" required />
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12 form-group gk-email">
+                                            <input type="email" name="contact_email" class="input-email form-control email" placeholder="Email" required />
+                                        </div>
+                                    </div>
                                 </div>
-                              </div>
-                              <div class="row">
-                                <!-- Input: Email -->
-                                <div class="col-md-12 form-group gk-email">
-                                  <input
-                                    type="email"
-                                    name="contact_email"
-                                    class="input-email form-control email"
-                                    placeholder="Email"
-                                    required
-                                  />
+                                <div class="form-group">
+                                    <div class="col-lg-12 col-md-12 gk-textarea-message">
+                                        <textarea name="contact_message" class="textarea-message form-control" rows="4" cols="25" placeholder="Message" required></textarea>
+                                    </div>
                                 </div>
-                              </div>
+                                <div class="gk-input-submit submit text-center">
+                                    <button type="submit" class="btn gk-submit">Send Message</button>
+                                </div>
                             </div>
-                            <div class="form-group">
-                              <!-- Input: Textarea -->
-                              <div
-                                class="col-lg-12 col-md-12 gk-textarea-message"
-                              >
-                                <textarea
-                                  name="contact_message"
-                                  class="textarea-message form-control"
-                                  rows="4"
-                                  cols="25"
-                                  placeholder="Message"
-                                  required
-                                ></textarea>
-                              </div>
-                            </div>
-                            <!-- Submit Button -->
-                            <!-- Submit Button -->
-                            <div class="gk-input-submit submit text-center">
-                              <button
-                                type="submit"
-                                class="btn gk-submit"
-                                style="
-                                  background: linear-gradient(
-                                    to right,
-                                    #ee3305,
-                                    #f57818
-                                  );
-                                  color: white;
-                                  padding: 12px 25px;
-                                  border: none;
-                                  border-radius: 30px;
-                                  font-size: 18px;
-                                  font-weight: bold;
-                                  transition: background 0.3s ease,
-                                    box-shadow 0.3s ease;
-                                  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-                                  cursor: pointer;
-                                "
-                              >
-                                Send Message
-                              </button>
-                            </div>
-                          </div>
                         </div>
-                      </form>
+                    </form>
                       <!-- Form Ends -->
                     </div>
                     <!-- Contact Form Container Ends -->
@@ -2094,6 +2041,7 @@
     <!-- Wrapper Ends -->
 
     <!-- Script Begins -->
+     
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"></script>
