--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
                 <div class="row">
                   <div
                     class="col-12 animated"
-                    data-animation="fadeInUp"
+                    data-animation="fadeInLeft"
                     data-animation-delay="800"
                   >
                     <!-- Reviews Container Begins -->
